--- a/src/main/resources/view/payment.fxml
+++ b/src/main/resources/view/payment.fxml
@@ -14,7 +14,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="549.0" prefWidth="952.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <GridPane layoutX="48.0" layoutY="49.0" prefHeight="356.0" prefWidth="302.0">
@@ -35,10 +34,10 @@
             <Label text="payDateTime" GridPane.rowIndex="2" />
             <Label text="price" GridPane.rowIndex="3" />
             <Label text="payFor" GridPane.rowIndex="4" />
-            <TextField fx:id="idText" GridPane.columnIndex="1" />
-            <TextField fx:id="priceText" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <DatePicker fx:id="DatePicker" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="idText" editable="false" GridPane.columnIndex="1" />
             <ComboBox fx:id="payTypeCombo" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <DatePicker fx:id="DatePicker" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="priceText" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <ComboBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
       </GridPane>
