--- a/src/main/resources/view/doctor.fxml
+++ b/src/main/resources/view/doctor.fxml
@@ -2,50 +2,61 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<Pane focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="667.0" prefWidth="1008.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.DoctorController">
+<Pane focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="682.0" prefWidth="763.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.DoctorController">
    <children>
-      <HBox layoutX="13.0" layoutY="14.0" prefHeight="48.0" prefWidth="983.0">
+      <HBox layoutX="31.0" layoutY="14.0" prefHeight="48.0" prefWidth="701.0">
          <children>
-            <TextArea nodeOrientation="RIGHT_TO_LEFT" opacity="0.39" prefHeight="10.0" prefWidth="150.0" scaleY="0.8">
+            <DatePicker fx:id="DateText" opacity="0.72" prefHeight="26.0" prefWidth="157.0">
                <HBox.margin>
-                  <Insets left="10.0" />
+                  <Insets top="4.0" />
                </HBox.margin>
-            </TextArea>
-            <Label prefHeight="21.0" prefWidth="63.0" text="تاریخ :" textAlignment="CENTER" textFill="#780632">
+            </DatePicker>
+            <Label prefHeight="21.0" prefWidth="70.0" text="تاریخ :" textAlignment="CENTER" textFill="#780632">
                <HBox.margin>
-                  <Insets left="10.0" />
-               </HBox.margin>
-            </Label>
-            <TextArea nodeOrientation="RIGHT_TO_LEFT" opacity="0.39" prefHeight="200.0" prefWidth="200.0" scaleY="0.8">
-               <HBox.margin>
-                  <Insets left="220.0" />
-               </HBox.margin>
-            </TextArea>
-            <Label text="متخصص :" textFill="#780632">
-               <HBox.margin>
-                  <Insets left="5.0" right="5.0" />
+                  <Insets left="10.0" top="8.0" />
                </HBox.margin>
             </Label>
-            <TextArea nodeOrientation="RIGHT_TO_LEFT" opacity="0.39" prefHeight="20.0" prefWidth="200.0" scaleY="0.8" />
-            <Label contentDisplay="RIGHT" nodeOrientation="RIGHT_TO_LEFT" prefHeight="21.0" prefWidth="53.0" text=" دکتر: " textAlignment="RIGHT" textFill="#780632">
+            <TextField fx:id="specialtyTextFill" prefHeight="31.0" prefWidth="170.0">
+               <HBox.margin>
+                  <Insets right="5.0" top="5.0" />
+               </HBox.margin>
+            </TextField>
+            <Label prefHeight="21.0" prefWidth="70.0" text="متخصص :" textFill="#780632">
+               <HBox.margin>
+                  <Insets left="5.0" right="20.0" top="8.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="doctorNameTextFill" prefHeight="31.0" prefWidth="170.0">
+               <HBox.margin>
+                  <Insets top="5.0" />
+               </HBox.margin>
+            </TextField>
+            <Label contentDisplay="RIGHT" nodeOrientation="RIGHT_TO_LEFT" prefHeight="21.0" prefWidth="43.0" text=" دکتر: " textAlignment="RIGHT" textFill="#780632">
                <opaqueInsets>
                   <Insets left="40.0" right="10.0" />
                </opaqueInsets>
                <HBox.margin>
-                  <Insets />
+                  <Insets top="8.0" />
                </HBox.margin>
             </Label>
          </children>
       </HBox>
-      <Label layoutX="911.0" layoutY="68.0" text="اطلاعات بیمار" textFill="#780632" />
+      <Label layoutX="630.0" layoutY="81.0" text="اطلاعات بیمار" textFill="#496dbf">
+         <font>
+            <Font name="System Bold" size="17.0" />
+         </font></Label>
       <GridPane layoutX="118.0" layoutY="126.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="9.0" prefWidth="924.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="159.0" minWidth="10.0" prefWidth="59.0" />
@@ -59,72 +70,85 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <HBox layoutX="13.0" layoutY="95.0" prefHeight="48.0" prefWidth="983.0">
+      <HBox layoutX="41.0" layoutY="112.0" prefHeight="48.0" prefWidth="701.0">
          <children>
-            <TextArea opacity="0.39" prefHeight="48.0" prefWidth="200.0" scaleY="0.8" />
-            <Label text="ایدی ویزیت : " textFill="#780632">
+            <TextField fx:id="visitIdTextFill" prefHeight="31.0" prefWidth="46.0">
                <HBox.margin>
-                  <Insets right="80.0" />
-               </HBox.margin></Label>
-            <TextArea opacity="0.39" prefHeight="48.0" prefWidth="200.0" scaleY="0.8" />
-            <Label text="تاریخ تواد : " textFill="#780632">
+                  <Insets top="5.0" />
+               </HBox.margin>
+            </TextField>
+            <Label prefHeight="21.0" prefWidth="96.0" text="ایدی ویزیت : " textFill="#780632">
                <HBox.margin>
-                  <Insets right="80.0" />
-               </HBox.margin></Label>
-            <TextArea nodeOrientation="RIGHT_TO_LEFT" opacity="0.39" prefHeight="48.0" prefWidth="196.0" scaleY="0.8" />
+                  <Insets right="10.0" top="6.0" />
+               </HBox.margin>
+               <padding>
+                  <Insets right="10.0" />
+               </padding>
+            </Label>
+            <DatePicker fx:id="PatientBirthDayText" prefHeight="23.0" prefWidth="157.0">
+               <HBox.margin>
+                  <Insets top="4.0" />
+               </HBox.margin>
+            </DatePicker>
+            <Label text="تاریخ تولد : " textFill="#780632">
+               <HBox.margin>
+                  <Insets right="10.0" top="6.0" />
+               </HBox.margin>
+               <padding>
+                  <Insets right="10.0" />
+               </padding>
+            </Label>
+            <TextField fx:id="patientNameTextFill" prefHeight="31.0" prefWidth="170.0">
+               <HBox.margin>
+                  <Insets top="5.0" />
+               </HBox.margin>
+            </TextField>
             <Label prefHeight="29.0" prefWidth="64.0" text="نام بیمار: " textFill="#780632" />
          </children>
       </HBox>
-      <GridPane gridLinesVisible="true" layoutX="13.0" layoutY="193.0" prefHeight="398.0" prefWidth="460.0">
+      <Label layoutX="41.0" layoutY="194.0" text="Drugs" textFill="#780632">
+         <font>
+            <Font name="System Bold" size="19.0" />
+         </font></Label>
+      <Label layoutX="526.0" layoutY="194.0" text="prescription" textFill="#780632">
+         <font>
+            <Font name="System Bold" size="19.0" />
+         </font></Label>
+      <GridPane layoutX="420.0" layoutY="636.0" prefHeight="29.0" prefWidth="320.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-      </GridPane>
-      <GridPane gridLinesVisible="true" layoutX="524.0" layoutY="193.0" prefHeight="398.0" prefWidth="460.0">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="66.0" minHeight="10.0" prefHeight="66.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="66.0" minHeight="10.0" prefHeight="66.0" vgrow="SOMETIMES" />
-         </rowConstraints>
-      </GridPane>
-      <Label layoutX="226.0" layoutY="166.0" text="Drugs" textFill="#780632" />
-      <Label layoutX="715.0" layoutY="166.0" text="prescription" textFill="#780632" />
-      <GridPane layoutX="525.0" layoutY="614.0" prefHeight="30.0" prefWidth="460.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.0" minWidth="10.0" prefWidth="165.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="155.0" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="248.0" text="ذخیره" />
-            <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="235.0" text="حذف" GridPane.columnIndex="1" />
+            <Button fx:id="deleteButton" mnemonicParsing="false" prefHeight="31.0" prefWidth="164.0" text="حذف" GridPane.columnIndex="1" />
+            <Button fx:id="saveButton" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" text="ذخیره" />
          </children>
       </GridPane>
+      <TableView fx:id="prescriptionTable" layoutX="420.0" layoutY="228.0" prefHeight="398.0" prefWidth="320.0">
+        <columns>
+          <TableColumn fx:id="presctiptionNumberColumn" prefWidth="65.0" text="number" />
+          <TableColumn fx:id="prescriptionNameColumn" prefWidth="99.0" text="name" />
+            <TableColumn fx:id="prescriptionPriceColumn" prefWidth="75.0" text="price" />
+            <TableColumn fx:id="PrescriptionQuantityColumn" text="quantity" />
+        </columns>
+      </TableView>
+      <TableView fx:id="drugsTable" layoutX="27.0" layoutY="228.0" prefHeight="398.0" prefWidth="390.0">
+        <columns>
+          <TableColumn fx:id="drugNumberColumn" prefWidth="75.0" text="number" />
+          <TableColumn fx:id="drugIdColumn" prefWidth="75.0" text="DrugId" />
+            <TableColumn fx:id="DrubNameCulomn" prefWidth="84.0" text="name" />
+            <TableColumn fx:id="drugPriceColumn" prefWidth="82.0" text="price" />
+            <TableColumn fx:id="drugQuantityColumn" prefWidth="72.0" text="quantity" />
+        </columns>
+      </TableView>
+      <Label layoutX="106.0" layoutY="199.0" opacity="0.5" text="Search By Drug Name">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <TextField fx:id="searchTextFill" layoutX="233.0" layoutY="193.0" prefHeight="31.0" prefWidth="182.0" />
    </children>
 </Pane>
