--- a/src/main/resources/view/doctor.fxml
+++ b/src/main/resources/view/doctor.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -14,141 +14,91 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<Pane focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="682.0" prefWidth="763.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.DoctorController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="459.0" prefWidth="905.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.DoctorController">
    <children>
-      <HBox layoutX="31.0" layoutY="14.0" prefHeight="48.0" prefWidth="701.0">
-         <children>
-            <DatePicker fx:id="DateText" opacity="0.72" prefHeight="26.0" prefWidth="157.0">
-               <HBox.margin>
-                  <Insets top="4.0" />
-               </HBox.margin>
-            </DatePicker>
-            <Label prefHeight="21.0" prefWidth="70.0" text="تاریخ :" textAlignment="CENTER" textFill="#780632">
-               <HBox.margin>
-                  <Insets left="10.0" top="8.0" />
-               </HBox.margin>
-            </Label>
-            <TextField fx:id="specialtyTextFill" prefHeight="31.0" prefWidth="170.0">
-               <HBox.margin>
-                  <Insets right="5.0" top="5.0" />
-               </HBox.margin>
-            </TextField>
-            <Label prefHeight="21.0" prefWidth="70.0" text="متخصص :" textFill="#780632">
-               <HBox.margin>
-                  <Insets left="5.0" right="20.0" top="8.0" />
-               </HBox.margin>
-            </Label>
-            <TextField fx:id="doctorNameTextFill" prefHeight="31.0" prefWidth="170.0">
-               <HBox.margin>
-                  <Insets top="5.0" />
-               </HBox.margin>
-            </TextField>
-            <Label contentDisplay="RIGHT" nodeOrientation="RIGHT_TO_LEFT" prefHeight="21.0" prefWidth="43.0" text=" دکتر: " textAlignment="RIGHT" textFill="#780632">
-               <opaqueInsets>
-                  <Insets left="40.0" right="10.0" />
-               </opaqueInsets>
-               <HBox.margin>
-                  <Insets top="8.0" />
-               </HBox.margin>
-            </Label>
-         </children>
-      </HBox>
-      <Label layoutX="630.0" layoutY="81.0" text="اطلاعات بیمار" textFill="#496dbf">
-         <font>
-            <Font name="System Bold" size="17.0" />
-         </font></Label>
-      <GridPane layoutX="118.0" layoutY="126.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="9.0" prefWidth="924.0">
+      <GridPane layoutX="32.0" layoutY="21.0" prefHeight="347.0" prefWidth="259.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="159.0" minWidth="10.0" prefWidth="59.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="304.0" minWidth="10.0" prefWidth="190.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="286.0" minWidth="10.0" prefWidth="128.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="212.0" minWidth="10.0" prefWidth="196.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="55.0" minWidth="0.0" prefWidth="54.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="165.0" minWidth="10.0" prefWidth="111.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="173.0" minWidth="10.0" prefWidth="122.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="202.0" minWidth="10.0" prefWidth="95.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
-      </GridPane>
-      <HBox layoutX="41.0" layoutY="112.0" prefHeight="48.0" prefWidth="701.0">
          <children>
-            <TextField fx:id="visitIdTextFill" prefHeight="31.0" prefWidth="46.0">
+            <Label text="id" textFill="#630749" />
+            <Label text="UserId" textFill="#630749" GridPane.rowIndex="1" />
+            <Label text="specialty" textFill="#630749" GridPane.rowIndex="2" />
+            <Label text="price" textFill="#630749" GridPane.rowIndex="3" />
+            <TextField fx:id="idText" editable="false" GridPane.columnIndex="1" />
+            <TextField fx:id="userIdText" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <ComboBox fx:id="specialityCombo" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <ComboBox fx:id="priceCombo" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+         </children>
+      </GridPane>
+      <HBox layoutX="32.0" layoutY="374.0" prefHeight="54.0" prefWidth="259.0">
+         <children>
+            <Button fx:id="saveButton" layoutX="20.0" mnemonicParsing="false" prefWidth="80.0" text="Save" textFill="#87143d">
                <HBox.margin>
-                  <Insets top="5.0" />
+                  <Insets right="38.0" top="15.0" />
                </HBox.margin>
-            </TextField>
-            <Label prefHeight="21.0" prefWidth="96.0" text="ایدی ویزیت : " textFill="#780632">
+               <font>
+                  <Font name="System Italic" size="14.0" />
+               </font>
+            </Button>
+            <Button fx:id="editButton" layoutX="20.0" mnemonicParsing="false" prefWidth="80.0" text="Edit" textFill="#87143d">
                <HBox.margin>
-                  <Insets right="10.0" top="6.0" />
+                  <Insets right="38.0" top="15.0" />
                </HBox.margin>
-               <padding>
-                  <Insets right="10.0" />
-               </padding>
-            </Label>
-            <DatePicker fx:id="PatientBirthDayText" prefHeight="23.0" prefWidth="157.0">
+               <font>
+                  <Font name="System Italic" size="14.0" />
+               </font>
+            </Button>
+            <Button fx:id="deleteButton" layoutX="20.0" mnemonicParsing="false" prefWidth="80.0" text="Delete" textFill="#87143d">
                <HBox.margin>
-                  <Insets top="4.0" />
+                  <Insets top="15.0" />
                </HBox.margin>
-            </DatePicker>
-            <Label text="تاریخ تولد : " textFill="#780632">
-               <HBox.margin>
-                  <Insets right="10.0" top="6.0" />
-               </HBox.margin>
-               <padding>
-                  <Insets right="10.0" />
-               </padding>
-            </Label>
-            <TextField fx:id="patientNameTextFill" prefHeight="31.0" prefWidth="170.0">
-               <HBox.margin>
-                  <Insets top="5.0" />
-               </HBox.margin>
-            </TextField>
-            <Label prefHeight="29.0" prefWidth="64.0" text="نام بیمار: " textFill="#780632" />
+               <font>
+                  <Font name="System Italic" size="14.0" />
+               </font>
+            </Button>
          </children>
       </HBox>
-      <Label layoutX="41.0" layoutY="194.0" text="Drugs" textFill="#780632">
-         <font>
-            <Font name="System Bold" size="19.0" />
-         </font></Label>
-      <Label layoutX="526.0" layoutY="194.0" text="prescription" textFill="#780632">
-         <font>
-            <Font name="System Bold" size="19.0" />
-         </font></Label>
-      <GridPane layoutX="420.0" layoutY="636.0" prefHeight="29.0" prefWidth="320.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.0" minWidth="10.0" prefWidth="165.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="155.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <TableView fx:id="doctorTable" layoutX="310.0" layoutY="85.0" prefHeight="334.0" prefWidth="572.0">
+        <columns>
+          <TableColumn fx:id="idColumn" prefWidth="75.0" text="id" />
+          <TableColumn fx:id="nameColumn" prefWidth="125.0" text="name" />
+            <TableColumn fx:id="familyColumn" prefWidth="125.0" text="family" />
+            <TableColumn fx:id="specialityColumn" prefWidth="125.0" text="specialty" />
+            <TableColumn fx:id="priceColumn" prefWidth="122.0" text="price" />
+        </columns>
+      </TableView>
+      <HBox layoutX="310.0" layoutY="34.0" prefHeight="31.0" prefWidth="598.0">
          <children>
-            <Button fx:id="deleteButton" mnemonicParsing="false" prefHeight="31.0" prefWidth="164.0" text="حذف" GridPane.columnIndex="1" />
-            <Button fx:id="saveButton" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" text="ذخیره" />
+            <Label text="search:" textFill="#700f51">
+               <HBox.margin>
+                  <Insets left="10.0" top="5.0" />
+               </HBox.margin>
+            </Label>
+            <Label text="Name : " textFill="#700f51">
+               <HBox.margin>
+                  <Insets left="30.0" top="5.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="searchNameText" prefWidth="180.0">
+               <HBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </HBox.margin>
+            </TextField>
+            <Label text="Family : " textFill="#700f51">
+               <HBox.margin>
+                  <Insets top="5.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="searchFamilyText" prefHeight="31.0" prefWidth="180.0" />
          </children>
-      </GridPane>
-      <TableView fx:id="prescriptionTable" layoutX="420.0" layoutY="228.0" prefHeight="398.0" prefWidth="320.0">
-        <columns>
-          <TableColumn fx:id="presctiptionNumberColumn" prefWidth="65.0" text="number" />
-          <TableColumn fx:id="prescriptionNameColumn" prefWidth="99.0" text="name" />
-            <TableColumn fx:id="prescriptionPriceColumn" prefWidth="75.0" text="price" />
-            <TableColumn fx:id="PrescriptionQuantityColumn" text="quantity" />
-        </columns>
-      </TableView>
-      <TableView fx:id="drugsTable" layoutX="27.0" layoutY="228.0" prefHeight="398.0" prefWidth="390.0">
-        <columns>
-          <TableColumn fx:id="drugNumberColumn" prefWidth="75.0" text="number" />
-          <TableColumn fx:id="drugIdColumn" prefWidth="75.0" text="DrugId" />
-            <TableColumn fx:id="DrubNameCulomn" prefWidth="84.0" text="name" />
-            <TableColumn fx:id="drugPriceColumn" prefWidth="82.0" text="price" />
-            <TableColumn fx:id="drugQuantityColumn" prefWidth="72.0" text="quantity" />
-        </columns>
-      </TableView>
-      <Label layoutX="106.0" layoutY="199.0" opacity="0.5" text="Search By Drug Name">
-         <font>
-            <Font size="13.0" />
-         </font>
-      </Label>
-      <TextField fx:id="searchTextFill" layoutX="233.0" layoutY="193.0" prefHeight="31.0" prefWidth="182.0" />
+      </HBox>
    </children>
 </Pane>
