--- a/src/main/resources/view/EmployeeView.fxml
+++ b/src/main/resources/view/EmployeeView.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="267.0" prefWidth="625.0" xmlns="http://javafx.com/javafx/8.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.EmployeeController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="287.0" prefWidth="625.0" xmlns="http://javafx.com/javafx/8.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.EmployeeController">
    <children>
       <GridPane layoutX="89.0" layoutY="22.0">
         <columnConstraints>
@@ -36,8 +36,8 @@
             <Label text="End_Time" GridPane.rowIndex="3" />
          </children>
       </GridPane>
-      <Label layoutX="342.0" layoutY="29.0" text="Search :" />
-      <Label layoutX="403.0" layoutY="30.0" text="User_Id :" />
+      <Label layoutX="342.0" layoutY="26.0" text="Search :" />
+      <Label layoutX="403.0" layoutY="26.0" text="User_Id :" />
       <TableView fx:id="employeeTable" layoutX="307.0" layoutY="56.0" prefHeight="200.0" prefWidth="303.0">
         <columns>
           <TableColumn fx:id="idColumn" prefWidth="28.800048828125" text="Id" />
@@ -46,45 +46,54 @@
             <TableColumn fx:id="endTimeColumn" prefWidth="107.20001220703125" text="End_Time" />
         </columns>
       </TableView>
-      <Button fx:id="saveButton" layoutX="86.0" layoutY="156.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="56.0" text="Save" />
-      <Button fx:id="deleteButton" layoutX="219.0" layoutY="231.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="56.0" text="Delete" />
-      <Button fx:id="editButton" layoutX="147.0" layoutY="196.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="56.0" text="Edit" />
-      <TextField fx:id="searchUserIdText" layoutX="470.0" layoutY="25.0" prefHeight="25.0" prefWidth="100.0" />
+      <Button fx:id="saveButton" layoutX="86.0" layoutY="156.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="Save" />
+      <Button fx:id="deleteButton" layoutX="219.0" layoutY="231.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="Delete" />
+      <Button fx:id="editButton" layoutX="147.0" layoutY="196.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="Edit" />
+      <TextField fx:id="searchUserIdText" layoutX="470.0" layoutY="21.0" prefHeight="25.0" prefWidth="100.0" />
       <VBox layoutX="64.0" layoutY="221.0" prefHeight="200.0" prefWidth="22.0" />
-      <Label layoutX="30.0" layoutY="16.0" text="E" textAlignment="CENTER" textFill="#ef1919" textOverrun="CLIP">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="30.0" layoutY="51.0" text="p" textAlignment="CENTER" textFill="#ef1919" textOverrun="CLIP">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="30.0" layoutY="86.0" text="l" textAlignment="CENTER" textFill="#ef1919" textOverrun="CLIP">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="30.0" layoutY="121.0" text="o" textAlignment="CENTER" textFill="#ef1919" textOverrun="CLIP">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="30.0" layoutY="156.0" text="y" textAlignment="CENTER" textFill="#ef1919" textOverrun="CLIP">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="30.0" layoutY="192.0" text="e" textAlignment="CENTER" textFill="#ef1919" textOverrun="CLIP">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="30.0" layoutY="227.0" text="e" textAlignment="CENTER" textFill="#ef1919" textOverrun="CLIP">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
+      <VBox layoutX="14.0" layoutY="11.0" prefHeight="230.0" prefWidth="51.0">
+         <children>
+            <Label text="E" textFill="#ea1f1f">
+               <font>
+                  <Font name="System Bold Italic" size="21.0" />
+               </font>
+            </Label>
+            <Label text="m" textFill="#ea1f1f">
+               <font>
+                  <Font name="System Bold Italic" size="21.0" />
+               </font>
+            </Label>
+            <Label prefHeight="50.0" prefWidth="45.0" text="p" textFill="#ea1f1f">
+               <font>
+                  <Font name="System Bold Italic" size="21.0" />
+               </font>
+            </Label>
+            <Label text="l" textFill="#ea1f1f">
+               <font>
+                  <Font name="System Bold Italic" size="21.0" />
+               </font>
+            </Label>
+            <Label text="o" textFill="#ea1f1f">
+               <font>
+                  <Font name="System Bold Italic" size="21.0" />
+               </font>
+            </Label>
+            <Label text="y" textFill="#ea1f1f">
+               <font>
+                  <Font name="System Bold Italic" size="21.0" />
+               </font>
+            </Label>
+            <Label text="e" textFill="#ea1f1f">
+               <font>
+                  <Font name="System Bold Italic" size="21.0" />
+               </font>
+            </Label>
+            <Label text="e" textFill="#ea1f1f">
+               <font>
+                  <Font name="System Bold Italic" size="21.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
    </children>
 </Pane>
