--- a/src/main/resources/view/medical.fxml
+++ b/src/main/resources/view/medical.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="507.0" prefWidth="873.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="507.0" prefWidth="873.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.MedicalController">
    <children>
       <GridPane layoutX="35.0" layoutY="37.0" prefHeight="359.0" prefWidth="300.0">
         <columnConstraints>
@@ -55,7 +54,7 @@
             <Button fx:id="deleteButton" mnemonicParsing="false" text="Delete" />
          </children>
       </HBox>
-      <TableView fx:id="medicalTableView" layoutX="383.0" layoutY="96.0" prefHeight="359.0" prefWidth="448.0">
+      <TableView fx:id="medicalTable" layoutX="383.0" layoutY="96.0" prefHeight="359.0" prefWidth="448.0">
         <columns>
           <TableColumn fx:id="idColumn" prefWidth="52.0" text="Id" />
           <TableColumn fx:id="titleColumn" prefWidth="50.0" text="Title" />
@@ -65,10 +64,10 @@
             <TableColumn fx:id="priceColumn" prefWidth="75.0" text="Price" />
         </columns>
       </TableView>
-      <HBox layoutX="423.0" layoutY="48.0" prefHeight="31.0" prefWidth="368.0">
+      <HBox layoutX="418.0" layoutY="48.0" prefHeight="31.0" prefWidth="394.0">
          <children>
             <Label prefHeight="25.0" prefWidth="64.0" text="Search" />
-            <Label prefHeight="26.0" prefWidth="72.0" text="Doctor_id :">
+            <Label prefHeight="26.0" prefWidth="91.0" text="Doctor_id">
                <HBox.margin>
                   <Insets left="15.0" />
                </HBox.margin>
