--- a/src/main/resources/view/PrescriptionView.fxml
+++ b/src/main/resources/view/PrescriptionView.fxml
@@ -34,11 +34,19 @@
             <TextField fx:id="priceText" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
-      <HBox layoutX="51.0" layoutY="447.0" prefHeight="54.0" prefWidth="208.0">
+      <HBox layoutX="14.0" layoutY="447.0" prefHeight="54.0" prefWidth="283.0">
          <children>
+            <Button fx:id="addDrugButton" mnemonicParsing="false" prefWidth="80.0" text="AddDrug" textFill="#87143d">
+               <font>
+                  <Font name="System Italic" size="14.0" />
+               </font>
+               <HBox.margin>
+                  <Insets right="20.0" top="15.0" />
+               </HBox.margin>
+            </Button>
             <Button fx:id="drugEditButton" layoutX="20.0" mnemonicParsing="false" prefWidth="80.0" text="Edit" textFill="#87143d">
                <HBox.margin>
-                  <Insets right="38.0" top="15.0" />
+                  <Insets right="20.0" top="15.0" />
                </HBox.margin>
                <font>
                   <Font name="System Italic" size="14.0" />
