--- a/src/main/resources/view/UserView.fxml
+++ b/src/main/resources/view/UserView.fxml
@@ -11,12 +11,13 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="497.0" prefWidth="1042.0" xmlns="http://javafx.com/javafx/8.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.UserController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="509.0" prefWidth="1161.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.UserController">
    <children>
       <VBox layoutX="14.0" layoutY="47.0" prefHeight="200.0" prefWidth="0.0" />
       <VBox layoutX="14.0" layoutY="171.0" prefHeight="200.0" prefWidth="34.0">
@@ -45,8 +46,8 @@
       </VBox>
       <GridPane layoutX="54.0" layoutY="18.0" prefHeight="471.0" prefWidth="245.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="117.39999389648438" minWidth="10.0" prefWidth="76.60000610351562" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="171.60000610351562" minWidth="10.0" prefWidth="168.39999389648438" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="117.39999389648438" minWidth="10.0" prefWidth="94.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="171.60000610351562" minWidth="10.0" prefWidth="151.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -71,7 +72,7 @@
             <Label text="NickName" GridPane.rowIndex="8" />
             <Label text="Password" GridPane.rowIndex="7" />
             <Label text="Locked" GridPane.rowIndex="9" />
-            <Label text="RegisterDate" GridPane.rowIndex="10" />
+            <Label prefHeight="21.0" prefWidth="92.0" text="RegisterDate" GridPane.rowIndex="10" />
             <Label text="BirthDate" GridPane.rowIndex="3" />
             <TextField fx:id="idText" editable="false" GridPane.columnIndex="1" />
             <TextField fx:id="nameText" GridPane.columnIndex="1" GridPane.rowIndex="1" />
@@ -102,28 +103,40 @@
             <DatePicker fx:id="registerDate" GridPane.columnIndex="1" GridPane.rowIndex="10" />
          </children>
       </GridPane>
-      <TableView fx:id="userTable" layoutX="329.0" layoutY="56.0" prefHeight="385.0" prefWidth="705.0">
+      <TableView fx:id="userTable" layoutX="332.0" layoutY="62.0" prefHeight="385.0" prefWidth="809.0">
         <columns>
-          <TableColumn fx:id="idColumn" prefWidth="23.20001220703125" text="Id" />
-          <TableColumn fx:id="nameColumn" prefWidth="52.79998779296875" text="Name" />
-            <TableColumn fx:id="familyColumn" prefWidth="68.0" text="Family" />
-            <TableColumn fx:id="birthDateColumn" prefWidth="92.7999267578125" text="BirthDate" />
-            <TableColumn fx:id="roleColumn" prefWidth="49.59991455078125" text="Role" />
-            <TableColumn fx:id="statusColumn" prefWidth="41.60003662109375" text="Status" />
-            <TableColumn fx:id="userNameColumn" prefWidth="77.5999755859375" text="UserName" />
-            <TableColumn fx:id="passwordColumn" prefWidth="75.0" text="Password" />
-            <TableColumn fx:id="nickNameColumn" prefWidth="75.0" text="NickName" />
-            <TableColumn fx:id="lockedColumn" prefWidth="48.7999267578125" text="Locked" />
-            <TableColumn fx:id="registerDateColumn" prefWidth="101.5999755859375" text="RegisterDate" />
+          <TableColumn fx:id="idColumn" prefWidth="33.0" text="Id" />
+          <TableColumn fx:id="nameColumn" prefWidth="76.0" text="Name" />
+            <TableColumn fx:id="familyColumn" prefWidth="93.0" text="Family" />
+            <TableColumn fx:id="birthDateColumn" prefWidth="86.0" text="BirthDate" />
+            <TableColumn fx:id="roleColumn" minWidth="0.0" prefWidth="0.0" text="Role" />
+            <TableColumn fx:id="statusColumn" prefWidth="69.0" text="Status" />
+            <TableColumn fx:id="userNameColumn" prefWidth="106.0" text="UserName" />
+            <TableColumn fx:id="passwordColumn" prefWidth="91.0" text="Password" />
+            <TableColumn fx:id="nickNameColumn" minWidth="0.0" prefWidth="85.0" text="NickName" />
+            <TableColumn fx:id="lockedColumn" prefWidth="66.0" text="Locked" />
+            <TableColumn fx:id="registerDateColumn" prefWidth="103.0" text="RegisterDate" />
         </columns>
       </TableView>
       <Label layoutX="342.0" layoutY="25.0" text="Search :" />
       <Label layoutX="467.0" layoutY="24.0" text="Name:" />
       <TextField fx:id="searchNameText" layoutX="532.0" layoutY="19.0" />
-      <Button fx:id="saveButton" layoutX="501.0" layoutY="463.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="77.0" text="Save" />
-      <Button fx:id="editButton" layoutX="665.0" layoutY="463.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="77.0" text="Edit" />
-      <Button fx:id="deleteButton" layoutX="833.0" layoutY="463.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="68.0" text="Delete" />
       <Label layoutX="722.0" layoutY="23.0" text="Family :" />
       <TextField fx:id="searchFamilyText" layoutX="793.0" layoutY="19.0" />
+      <HBox layoutX="571.0" layoutY="456.0" prefHeight="47.0" prefWidth="332.0">
+         <children>
+            <Button fx:id="saveButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="77.0" text="Save">
+               <HBox.margin>
+                  <Insets right="50.0" />
+               </HBox.margin>
+            </Button>
+            <Button fx:id="editButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="77.0" text="Edit">
+               <HBox.margin>
+                  <Insets right="50.0" />
+               </HBox.margin>
+            </Button>
+            <Button fx:id="deleteButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="77.0" text="Delete" />
+         </children>
+      </HBox>
    </children>
 </Pane>
