--- a/src/main/resources/view/drugStock.fxml
+++ b/src/main/resources/view/drugStock.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.DrugStockController" >
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="344.0" prefWidth="627.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.DrugStockController">
    <children>
       <GridPane layoutX="52.0" layoutY="72.0" prefHeight="173.0" prefWidth="241.0">
         <columnConstraints>
@@ -45,11 +44,11 @@
             <Button fx:id="deleteButton" mnemonicParsing="false" text="Delete" />
          </children>
       </HBox>
-      <TableView fx:id="drugStockTable" layoutX="328.0" layoutY="85.0" prefHeight="219.0" prefWidth="250.0">
+      <TableView fx:id="drugStockTable" layoutX="328.0" layoutY="85.0" prefHeight="219.0" prefWidth="281.0">
         <columns>
           <TableColumn fx:id="idColumn" prefWidth="77.0" text="Id" />
-          <TableColumn fx:id="drugIdColumn" prefWidth="82.0" text="Drug_id" />
-            <TableColumn fx:id="drugCountColumn" prefWidth="90.0" text="DrugCount" />
+          <TableColumn fx:id="drugIdColumn" prefWidth="103.0" text="Drug_Name" />
+            <TableColumn fx:id="drugCountColumn" prefWidth="100.0" text="DrugCount" />
         </columns>
       </TableView>
    </children>
