--- a/src/main/resources/view/medical.fxml
+++ b/src/main/resources/view/medical.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="507.0" prefWidth="873.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.MedicalController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="507.0" prefWidth="883.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.MedicalController">
    <children>
       <GridPane layoutX="35.0" layoutY="37.0" prefHeight="359.0" prefWidth="300.0">
         <columnConstraints>
@@ -54,14 +54,14 @@
             <Button fx:id="deleteButton" mnemonicParsing="false" text="Delete" />
          </children>
       </HBox>
-      <TableView fx:id="medicalTable" layoutX="383.0" layoutY="96.0" prefHeight="359.0" prefWidth="448.0">
+      <TableView fx:id="medicalTable" layoutX="383.0" layoutY="96.0" prefHeight="359.0" prefWidth="490.0">
         <columns>
           <TableColumn fx:id="idColumn" prefWidth="52.0" text="Id" />
-          <TableColumn fx:id="titleColumn" prefWidth="50.0" text="Title" />
-            <TableColumn fx:id="descriptionColumn" prefWidth="98.0" text="Description" />
-            <TableColumn fx:id="doctorIdColumn" prefWidth="88.0" text="Doctor_id" />
-            <TableColumn fx:id="durationColumn" prefWidth="87.0" text="Duration" />
-            <TableColumn fx:id="priceColumn" prefWidth="75.0" text="Price" />
+          <TableColumn fx:id="titleColumn" prefWidth="83.0" text="Title" />
+            <TableColumn fx:id="descriptionColumn" prefWidth="92.0" text="Description" />
+            <TableColumn fx:id="doctorIdColumn" prefWidth="110.0" text="Doctor_Name" />
+            <TableColumn fx:id="durationColumn" prefWidth="85.0" text="Duration" />
+            <TableColumn fx:id="priceColumn" prefWidth="67.0" text="Price" />
         </columns>
       </TableView>
       <HBox layoutX="418.0" layoutY="48.0" prefHeight="31.0" prefWidth="394.0">
