--- a/src/main/resources/view/EmployeeView.fxml
+++ b/src/main/resources/view/EmployeeView.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="287.0" prefWidth="642.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.EmployeeController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="287.0" prefWidth="642.0" xmlns="http://javafx.com/javafx/8.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.EmployeeController">
    <children>
       <GridPane layoutX="89.0" layoutY="22.0">
         <columnConstraints>
@@ -26,7 +26,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextField fx:id="idText" GridPane.columnIndex="1" />
+            <TextField fx:id="idText" editable="false" GridPane.columnIndex="1" />
             <TextField fx:id="userIdText" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="startTimeText" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="endTimeText" GridPane.columnIndex="1" GridPane.rowIndex="3" />
