--- a/src/main/resources/view/drugStock.fxml
+++ b/src/main/resources/view/drugStock.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="344.0" prefWidth="627.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.DrugStockController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="344.0" prefWidth="627.0" xmlns="http://javafx.com/javafx/8.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.DrugStockController">
    <children>
       <GridPane layoutX="52.0" layoutY="72.0" prefHeight="173.0" prefWidth="241.0">
         <columnConstraints>
@@ -28,7 +28,7 @@
             <Label text="Id" />
             <Label text="Drug_id" GridPane.rowIndex="1" />
             <Label text="DrugCount" GridPane.rowIndex="2" />
-            <TextField fx:id="idText" GridPane.columnIndex="1" />
+            <TextField fx:id="idText" editable="false" GridPane.columnIndex="1" />
             <TextField fx:id="drugIdText" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="drugCountText" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
