--- a/src/main/resources/view/LoginView.fxml
+++ b/src/main/resources/view/LoginView.fxml
@@ -6,14 +6,14 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<Pane fx:controller="hospital.controller.LoginController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="251.0" prefWidth="334.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="168.0" prefWidth="313.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.LoginController">
    <children>
-      <GridPane layoutX="34.0" layoutY="42.0" prefHeight="90.0" prefWidth="264.0">
+      <GridPane layoutX="25.0" layoutY="14.0" prefHeight="90.0" prefWidth="264.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="164.0" minWidth="10.0" prefWidth="98.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="254.0" minWidth="10.0" prefWidth="166.0" />
@@ -23,16 +23,31 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Username" />
-            <Label text="Password" GridPane.rowIndex="1" />
+            <Label text="Username" textFill="#b51c35">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font></Label>
+            <Label text="Password" textFill="#b51c35" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font></Label>
             <TextField fx:id="usernameTxt" GridPane.columnIndex="1" />
             <PasswordField fx:id="passwordTxt" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
-      <Button fx:id="loginBtn" layoutX="102.0" layoutY="174.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="128.0" text="Login">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
+      <HBox layoutX="25.0" layoutY="117.0" prefHeight="39.0" prefWidth="264.0">
+         <children>
+            <Button fx:id="loginBtn" mnemonicParsing="false" prefHeight="50.0" prefWidth="134.0" text="Login" textFill="#b51c35">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Button>
+            <Button fx:id="signInBtn" mnemonicParsing="false" prefHeight="50.0" prefWidth="134.0" text="SignIn" textFill="#b51c35">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
    </children>
 </Pane>
